tests/script_errors/function_error_2/error.txt
Error: 
    2 | math::max("snot", 7)
      | ^^^^^^^^^^^^^^^^^^^^ Bad type passed to function math::max/2